style.css
body,
html {
    height: 100%;
    margin: 0;
    overflow: hidden;
    font-family: 'Fira Sans', sans-serif;
    background-color: #1A1A1A;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}


/* this is main */

#all_content {
    width: 100%;
}

#container {
    width: 90%;
    margin: auto;
    min-width: 90%;
}

#cover-info {
    width: 49%;
    float: left;
}

#cover-info img {
    width: 100%;
}

#buffer {
    margin: 0px;
    padding: 0px;
    display: block;
}

#mb-album-art {}

#track_info_div {
    width: 49%;
    float: right;
    margin-left: 1%;
    min-width: 49%;
}


/* this is sidebar */

#side-bar {
    width: 20px;
    z-index: 9999;
    /* high value to ensure it's on top */
    position: fixed;
    left: 0;
    background-color: #1A1A1A;
}

.content {
    background-color: #262626;
    padding-right: 20px;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
    width: 100%;
    /* add a shadow */
}

#side-bar .content {
    visibility: hidden;
    overflow: auto;
}

#side-bar:hover {
    width: 90%;
}

#side-bar:hover .content {
    visibility: visible;
}

p,
h1,
h2,
h3,
h4,
h5,
ul {
    color: #e5e5e5;
}

h1 {
    font-size: 48px;
    margin: 0px;
    margin-bottom: 10px;
    font-weight: 400;
    /* border-top: 1px solid #46629c;
     */
}

div {
    /* border: 1px solid #ff0000; */
}

h2 {
    margin-bottom: 5px;
    margin-top: 0px;
    font-size: 32px;
    padding-top: 5px;
    font-weight: 200;
}

h3 {
    margin-top: 20px;
    font-size: 28px;
    margin-bottom: 10px;
    font-weight: 100;
}

h4 {
    font-size: 20px;
    font-weight: 400;
    margin-top: 10px;
    margin-bottom: 0px;
}

h5 {
    font-size: 13px;
    margin-top: 10px;
    margin-right: 7px;
    margin-bottom: 20px;
    display: inline;
    color: #F5F5F5;
    font-weight: 400;
}

p {
    margin-top: 0px;
    margin-bottom: 15px;
    line-height: 1.5em;
    font-size: 14px;
    font-weight: 400;
    display: inline;
}

a:link {
    color: #F5F5F5;
}

a:visited {
    color: #F5F5F5;
}


/* mouse over link */

a:hover {
    color: #46629c;
}


/* selected link */

a:active {
    color: #F5F5F5;
}

#footerContent i.material-icons {
    font-size: 20px;
    float: right;
}

#track_info_div i.material-icons {
    font-size: 12px;
    padding-top: 0px;
    padding-bottom: 8px;
    /* border: 1px solid #46629c;
     */
}

.fade {
    opacity: 0;
    transition: opacity 1s;
    padding-bottom: 30px;
}

.fade:hover {
    opacity: 1;
}

#last-album-art {
    position: relative;
    top: 0;
    left: 0;
    float: left;
    width: 100%;
    height: 100%;
}

#footer {
    height: 0px;
    background-color: #0b0b0d;
    position: fixed;
    bottom: 0;
    width: 100%;
    overflow: auto;
}

#extra-main-header {
    width: 100%;
    float: left;
    padding-left: 20px;
    padding-top: 20px;
}

#extra-main {
    float: left;
    width: 65%;
    padding-left: 20px;
    padding-bottom: 50px;
    padding-top: 10px;
}

#extra-side {
    float: right;
    width: 30%;
    padding-bottom: 50px;
    padding-top: 0px;
    margin-top: 0px;
}

#extra-side img {
    width: 100%;
}

#relations img,
#albums img {
    width: 15px;
    height: 15px;
}

#extra-main img {
    height: 15px;
    width: 15px;
    margin-right: 5px;
}

#relations {
    display: flex;
    flex-direction: row;
}

#extra-side ul {
    list-style-type: none;
    margin-left: 0;
    padding-left: 0;
    font-size: 12px;
}

#extra-side li {
    display: flex;
    align-items: center;
}

#extra-side ul {
    padding-top: 0px;
    margin-top: 0px;
}

#albums span {
    padding-bottom: 3px;
}

#top-bar {
    width: 100%;
    float: left;
}

#wikipedia p {
    margin-top: 1em;
    margin-bottom: 1em;
}

#wikipedia {
    /* padding-bottom:40px;*/
}

#fullscreen-icon {
    /* font-size: 14px;*/
}


/* font-size: 14px;*/

